# arith

./: CMakeLists.txt  readme.md
app/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  addition.c  strings.c  substraction.c
lib/include/: addition.h  arith.h
tests/: CMakeLists.txt  TestAddition.c  TestAddition_Runner.c  TestSubstraction.c  TestSubstraction_Runner.c  all_tests.c
